Fix widow and subtext contrast

--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ img {
 
 nav {
   font-family: var(--mono);
-  font-size: 80%;
+  font-size: 75%;
   padding: 4rem 1rem;
 }
 
@@ -223,7 +223,7 @@ nav [class*="fa-"]:hover {
 .blackbox {
   padding: 1rem;
   border-radius: 10px;
-  color: white;
+  color: var(--white);
   background-color: var(--black);
   font-size: 1rem;
   line-height: 1.5;
